--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
       
       <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="#">Register here</a></p>
+    <p>Don't have an account? <a href="register.html">Register here</a></p>
   </div>
 </body>
 </html>
