--- a/home.html
+++ b/home.html
@@ -1,33 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Corporate Bites - Home</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      color: #ff6b35;
-    }
-    a {
-      display: inline-block;
-      margin-top: 20px;
-      background: #ff6b35;
-      color: white;
-      padding: 10px 20px;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Corporate Bites - Home</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
+    .video-background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: -1;
+    }
+    .video-background video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      transform: translate(-50%, -50%);
+      object-fit: cover;
+    }
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4); /* Dark overlay for readability */
+    }
+    .content {
+      position: relative;
+      z-index: 1;
+      text-align: center;
+      padding: 50px;
+      color: white;
+    }
+    h1 {
+      color: #ff6b35;
+      margin-bottom: 20px;
+    }
+    a {
+      display: inline-block;
+      margin-top: 20px;
+      background: #ff6b35;
+      color: white;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      margin: 0 10px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Corporate Bites!</h1>
-  <p>Enjoy your meals and share your feedback with us.</p>
-  <a href="feedback.html">Leave Feedback</a> |
-  <a href="login.html">Logout</a>
+  <div class="video-background">
+    <video autoplay muted loop playsinline>
+      <source src="your-video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay"></div>
+  </div>
+
+  <div class="content">
+    <h1>Welcome to Corporate Bites!</h1>
+    <p>Enjoy your meals and share your feedback with us.</p>
+    <a href="feedback.html">Leave Feedback</a>
+    <a href="login.html">Logout</a>
+  </div>
 </body>
 </html>
