--- a/home.html
+++ b/home.html
@@ -65,14 +65,14 @@
 <body>
   <div class="video-background">
     <video autoplay muted loop playsinline>
-      <source src="your-video.mp4" type="video/mp4">
+      <source src="Assets/2894881-uhd_3840_2160_24fps (1).mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="overlay"></div>
   </div>
 
   <div class="content">
-    <h1>Welcome to Corporate Bites!</h1>
+    <h1>Welcome to The Mom's Kitchen!</h1>
     <p>Enjoy your meals and share your feedback with us.</p>
     <a href="feedback.html">Leave Feedback</a>
     <a href="login.html">Logout</a>
