--- a/home.html
+++ b/home.html
@@ -70,7 +70,11 @@
       margin-bottom: 30px;
     }
 
-    a {
+    .button-container {
+      margin-top: 20px;
+    }
+
+    a.button {
       display: inline-block;
       margin: 0 10px;
       background: #ff6b35;
@@ -82,7 +86,7 @@
       transition: background 0.3s;
     }
 
-    a:hover {
+    a.button:hover {
       background: #e85c28;
     }
   </style>
@@ -99,8 +103,11 @@
   <div class="content">
     <h1>Welcome to Corporate Bites!</h1>
     <p>Enjoy your meals and share your feedback with us.</p>
-    <a href="feedback.html">Leave Feedback</a>
-    <a href="login.html">Logout</a>
+    <div class="button-container">
+      <a href="login.html" class="button">Login</a>
+      <a href="register.html" class="button">Register</a>
+      <a href="feedback.html" class="button">Leave Feedback</a>
+    </div>
   </div>
 </body>
 </html>
