--- a/home.html
+++ b/home.html
@@ -61,13 +61,13 @@
 
     h1 {
       font-size: 2.5em;
-      margin-bottom: 20px;
+      margin-bottom: hai 0.5px;
       color: #ff6b35;
     }
 
     p {
       font-size: 1.2em;
-      margin-bottom: 30px;
+      margin-bottom: 2px;
     }
 
     .button-container {
@@ -105,7 +105,6 @@
     <p>Enjoy your meals and share your feedback with us.</p>
     <div class="button-container">
       <a href="login.html" class="button">Login</a>
-      <a href="register.html" class="button">Register</a>
       <a href="feedback.html" class="button">Leave Feedback</a>
     </div>
   </div>
