--- a/home.html
+++ b/home.html
@@ -76,7 +76,7 @@
 
     a.button {
       display: inline-block;
-      margin: 0 10px;
+      margin: 0 50px;
       background: #ff6b35;
       color: white;
       padding: 12px 24px;
@@ -101,7 +101,7 @@
   </div>
 
   <div class="content">
-    <h1>Welcome to Corporate Bites!</h1>
+    <h1>The Mom's Kitchen!</h1>
     <p>Enjoy your meals and share your feedback with us.</p>
     <div class="button-container">
       <a href="login.html" class="button">Login</a>
