--- a/register.html
+++ b/register.html
@@ -2,74 +2,96 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Corporate Bites - Register</title>
+  <title>The Mom's Kitchen - Register</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: Arial, sans-serif;
       background: #f9f9f9;
+    }
+
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
       padding: 20px;
     }
-    form {
+
+    .register-box {
       background: white;
-      max-width: 400px;
-      margin: auto;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    h2 {
-      text-align: center;
-      color: #ff6b35;
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-    }
-    input {
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+      max-width: 400px;
+      text-align: center;
     }
-    button {
+
+    .register-box h1 {
+      color: #ff6b35;
+      margin-bottom: 20px;
+    }
+
+    .register-box input[type="text"],
+    .register-box input[type="email"],
+    .register-box input[type="password"] {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1em;
+      box-sizing: border-box;
+    }
+
+    .register-box button {
       background: #ff6b35;
       color: white;
-      padding: 10px;
+      padding: 12px;
       border: none;
       border-radius: 5px;
-      margin-top: 15px;
       width: 100%;
+      font-size: 1.1em;
       cursor: pointer;
+      transition: background 0.3s;
     }
-    .link {
-      text-align: center;
-      margin-top: 10px;
+
+    .register-box button:hover {
+      background: #e85c28;
+    }
+
+    .register-box p {
+      margin-top: 15px;
+      font-size: 0.9em;
+    }
+
+    .register-box a {
+      color: #ff6b35;
+      text-decoration: none;
+    }
+
+    .register-box a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <form action="#" method="POST">
-    <h2>Register</h2>
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-    <button type="submit" onclick="registerUser(event)">Register</button>
-    <div class="link">
-      Already have an account? <a href="login.html">Login here</a>
+  <div class="container">
+    <div class="register-box">
+      <h1>Register</h1>
+      <form action="login.html" method="post">
+        <input type="text" name="fullname" placeholder="Full Name" required>
+        <input type="email" name="email" placeholder="Email Address" required>
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button type="submit">Register</button>
+      </form>
+      <p>Already have an account? <a href="login.html">Login</a></p>
     </div>
-  </form>
-
-  <script>
-    function registerUser(event) {
-      event.preventDefault();
-      // For now, just redirect to login page
-      alert("Registration successful! Please log in.");
-      window.location.href = "login.html";
-    }
-  </script>
+  </div>
 </body>
 </html>
