--- a/login.html
+++ b/login.html
@@ -10,7 +10,38 @@
       padding: 0;
       height: 100%;
       font-family: Arial, sans-serif;
-      background: #f9f9f9;
+      overflow: hidden;
+    }
+
+    .video-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    .video-container video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      transform: translate(-50%, -50%);
+      object-fit: cover;
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: -1;
     }
 
     .container {
@@ -22,7 +53,7 @@
     }
 
     .login-box {
-      background: white;
+      background: rgba(255, 255, 255, 0.9);
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
@@ -79,6 +110,14 @@
   </style>
 </head>
 <body>
+  <div class="video-container">
+    <video autoplay muted loop playsinline>
+      <source src="Assets/2894881-uhd_3840_2160_24fps (1).mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay"></div>
+  </div>
+
   <div class="container">
     <div class="login-box">
       <h1>Login</h1>
@@ -87,7 +126,7 @@
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
       </form>
-      <p>Don’t have an account? <a href="#">Register</a></p>
+      <p>Don't have an account? <a href="register.html">Register</a></p>
     </div>
   </div>
 </body>
