--- a/login.html
+++ b/login.html
@@ -87,7 +87,7 @@
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
       </form>
-      <p>Don’t have an account? <a href="#">Register</a></p>
+      <p>Already have an account? <a href="login.html">Login</a></p>
     </div>
   </div>
 </body>
