--- a/login.html
+++ b/login.html
@@ -1,94 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>The Mom's Kitchen - Login</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-    }
+  <meta charset="UTF-8">
+  <title>The Mom's Kitchen - Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+    }
 
-    .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-      padding: 20px;
-    }
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      padding: 20px;
+    }
 
-    .login-box {
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      width: 100%;
-      max-width: 400px;
-      text-align: center;
-    }
+    .login-box {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+    }
 
-    .login-box h1 {
-      color: #ff6b35;
-      margin-bottom: 20px;
-    }
+    .login-box h1 {
+      color: #ff6b35;
+      margin-bottom: 20px;
+    }
 
-    .login-box input[type="text"],
-    .login-box input[type="password"] {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 1em;
-      box-sizing: border-box;
-    }
+    .login-box input[type="text"],
+    .login-box input[type="password"] {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1em;
+      box-sizing: border-box;
+    }
 
-    .login-box button {
-      background: #ff6b35;
-      color: white;
-      padding: 12px;
-      border: none;
-      border-radius: 5px;
-      width: 100%;
-      font-size: 1.1em;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
+    .login-box button {
+      background: #ff6b35;
+      color: white;
+      padding: 12px;
+      border: none;
+      border-radius: 5px;
+      width: 100%;
+      font-size: 1.1em;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
 
-    .login-box button:hover {
-      background: #e85c28;
-    }
+    .login-box button:hover {
+      background: #e85c28;
+    }
 
-    .login-box p {
-      margin-top: 15px;
-      font-size: 0.9em;
-    }
+    .login-box p {
+      margin-top: 15px;
+      font-size: 0.9em;
+    }
 
-    .login-box a {
-      color: #ff6b35;
-      text-decoration: none;
-    }
+    .login-box a {
+      color: #ff6b35;
+      text-decoration: none;
+    }
 
-    .login-box a:hover {
-      text-decoration: underline;
-    }
-  </style>
+    .login-box a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <div class="login-box">
-      <h1>Login</h1>
-      <form action="home.html" method="post">
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Login</button>
-      </form>
-      <p>Don’t have an account? <a href="register.html">Register</a></p>
-    </div>
-  </div>
+  <div class="container">
+    <div class="login-box">
+      <h1>Login</h1>
+      <form action="home.html" method="post">
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+      </form>
+      <p>Already have an account? <a href="register.html">Register</a></p>
+    </div>
+  </div>
 </body>
 </html>
