--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
     }
 
     .content p {
-      font-size: 20em;
+      font-size: 18px;
       margin-bottom: 20px;
       line-height: 2.4;
     }
