--- a/register.html
+++ b/register.html
@@ -85,7 +85,8 @@
       <h1>Register</h1>
       <form action="login.html" method="post">
         <input type="text" name="fullname" placeholder="Full Name" required>
-        <input type="email" name="email" placeholder="Email Address" required>
+        <input type="phone" name="mobile" placeholder="Mobile Number" required>
+        <input type="email" name="email" placeholder="Email Address" optional>
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Register</button>
