--- a/register.html
+++ b/register.html
@@ -37,8 +37,9 @@
     }
 
     .register-box input[type="text"],
+    .register-box input[type="password"],
     .register-box input[type="email"],
-    .register-box input[type="password"] {
+    .register-box input[type="tel"] {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
@@ -83,11 +84,10 @@
   <div class="container">
     <div class="register-box">
       <h1>Register</h1>
-      <form action="login.html" method="post">
-        <input type="text" name="fullname" placeholder="Full Name" required>
-        <input type="phone" name="mobile" placeholder="Mobile Number" required>
-        <input type="email" name="email" placeholder="Email Address" optional>
+      <form action="home.html" method="post">
         <input type="text" name="username" placeholder="Username" required>
+        <input type="tel" name="mobile" placeholder="Mobile Number" required>
+        <input type="email" name="email" placeholder="Email (Optional)">
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Register</button>
       </form>
