--- a/register.html
+++ b/register.html
@@ -84,7 +84,7 @@
   <div class="container">
     <div class="register-box">
       <h1>Register</h1>
-      <form action="home.html" method="post">
+      <form id="registerForm">
         <input type="text" name="username" placeholder="Username" required>
         <input type="tel" name="mobile" placeholder="Mobile Number" required>
         <input type="email" name="email" placeholder="Email (Optional)">
@@ -94,5 +94,13 @@
       <p>Already have an account? <a href="login.html">Login</a></p>
     </div>
   </div>
+  
+  <script>
+    document.getElementById("registerForm").addEventListener("submit", function(event){
+      event.preventDefault(); // Prevent the form from submitting traditionally
+      // Here you could add validation or saving data (e.g., localStorage) if needed
+      window.location.href = "home.html"; // Redirect to home page after successful registration
+    });
+  </script>
 </body>
 </html>
