--- a/login.html
+++ b/login.html
@@ -82,13 +82,21 @@
   <div class="container">
     <div class="login-box">
       <h1>Login</h1>
-      <form action="home.html" method="post">
+      <form id="loginForm">
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
       </form>
-      <p>Already have an account? <a href="register.html">Register</a></p>
+      <p>Don’t have an account? <a href="register.html">Register</a></p>
     </div>
   </div>
+  
+  <script>
+    document.getElementById("loginForm").addEventListener("submit", function(event){
+      event.preventDefault(); // Prevent the form from submitting traditionally
+      // Here you could add validation or authentication logic
+      window.location.href = "home.html"; // Redirect to home page after login
+    });
+  </script>
 </body>
 </html>
